--- a/flight/targets/sparkybgc/fw/Makefile
+++ b/flight/targets/sparkybgc/fw/Makefile
@@ -132,6 +132,7 @@ SRC += $(PIOSCOMMON)/pios_usb_util.c
 SRC += $(PIOSCOMMON)/pios_dma.c
 SRC += $(PIOSCOMMON)/pios_adc.c
 SRC += $(PIOSCOMMON)/pios_heap.c
+SRC += $(PIOSCOMMON)/pios_semaphore.c
 
 include ./UAVObjects.inc
 SRC += $(UAVOBJSRC)
