--- a/flight/targets/freedom/fw/Makefile
+++ b/flight/targets/freedom/fw/Makefile
@@ -58,7 +58,7 @@ OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
 OPTMODULES += ComUsbBridge
 OPTMODULES += Airspeed/revolution
-OPTMODULES += HTelemetry
+OPTMODULES += UAVOHoTTBridge
 
 PYMODULES = 
 #FlightPlan
