--- a/flight/targets/revomini/fw/Makefile
+++ b/flight/targets/revomini/fw/Makefile
@@ -55,7 +55,7 @@ OPTMODULES += Battery
 OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
 OPTMODULES += Airspeed/revolution
-OPTMODULES += HTelemetry
+OPTMODULES += UAVOHoTTBridge
 
 # Paths
 OPUAVTALKINC = $(OPUAVTALK)/inc
