--- a/androidgcs/AndroidManifest.xml
+++ b/androidgcs/AndroidManifest.xml
@@ -33,7 +33,7 @@
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyBaAV9pYtdvqFRlJ6psNH34GpDjejHoV8o"/>
 		
 		<!-- Object browser - main activity at the moment -->
-		<activity android:name="PfdActivity" android:label="@string/app_name">
+		<activity android:name="MainActivity" android:label="@string/app_name">
 		    
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
