--- a/package/Makefile.linux
+++ b/package/Makefile.linux
@@ -30,7 +30,9 @@ DEB_PLATFORM		:= amd64
 DEB_MACHINE_DIR		:= $(DEB_CFG_AMD64_DIR)
 DEB_MACHINE_FILES	:= $(DEB_CFG_AMD64_FILES)
 MACHINE_TYPE		:= $(shell uname -m)
+QT_PLUGINS_DIR		:= $(QT_SDK_DIR)/5.2.0/gcc_64/plugins
 ifneq ($(MACHINE_TYPE), x86_64)
+ QT_PLUGINS_DIR		:= $(QT_SDK_DIR)/5.2.0/gcc/plugins
  DEB_PLATFORM		:= i386
  DEB_MACHINE_DIR	:= $(DEB_CFG_I386_DIR)
  DEB_MACHINE_FILES	:= $(DEB_CFG_I386_FILES)
@@ -41,7 +43,6 @@ ALL_DEB_FILES += $(foreach f, $(DEB_MACHINE_FILES), $(DEB_BUILD_DIR)/$(f))
 DEB_PACKAGE_NAME	:= taulabs_$(VERSION_FULL)_$(DEB_PLATFORM)
 
 QT_SDK_DIR		:=$(ROOT_DIR)/tools/Qt5.2.0
-QT_PLUGINS_DIR		:=$(QT_SDK_DIR)/5.2.0/gcc_64/plugins
 
 QT_PLUGINS_USED		:=imageformats platforms sqldrivers
 
